feat: add pack entity
