# public/swagger.json
@@ -84,10 +84,42 @@
         ]
       }
     },
-    "/api/packs/open": {
+    "/api/packs/{id}": {
+      "get": {
+        "operationId": "PacksController_getPack",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Packs"
+        ]
+      }
+    },
+    "/api/packs/{id}/open": {
       "post": {
         "operationId": "PacksController_openPack",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": ""
